[gd_scene load_steps=15 format=3 uid="uid://ctd1ormjcl3lb"]

[ext_resource type="Script" path="res://scripts/Juego.gd" id="1_uk8yd"]
[ext_resource type="Script" path="res://scripts/Player1.gd" id="2_x5usa"]
[ext_resource type="Script" path="res://scripts/Player2.gd" id="3_i0qbh"]
[ext_resource type="Script" path="res://scripts/Pelota.gd" id="4_daccs"]
[ext_resource type="AudioStream" uid="uid://daycnsw0d8cti" path="res://one_beep-99630.mp3" id="5_eibih"]
[ext_resource type="Script" path="res://scripts/MenuPausa.gd" id="6_aecni"]
[ext_resource type="AudioStream" uid="uid://c2ipu5nbkys7h" path="res://8-bit-game-1-186975.mp3" id="7_545xp"]

[sub_resource type="LabelSettings" id="LabelSettings_7jsl8"]
font_size = 32

[sub_resource type="LabelSettings" id="LabelSettings_nlx8v"]
font_size = 32

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8iadh"]
size = Vector2(20, 108)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_42rne"]

[sub_resource type="LabelSettings" id="LabelSettings_poaqt"]
font_size = 128

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3inup"]
size = Vector2(17, 700)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dv5tc"]
size = Vector2(1279, 20)

[node name="Game" type="Node2D"]
self_modulate = Color(0, 0, 0, 1)
script = ExtResource("1_uk8yd")

[node name="Puntajes" type="HBoxContainer" parent="."]
z_index = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 434.5
offset_right = 854.5
offset_bottom = 50.0
grow_horizontal = 2
size_flags_horizontal = 3
size_flags_vertical = 4
alignment = 1

[node name="Puntaje1" type="Label" parent="Puntajes"]
layout_mode = 2
size_flags_horizontal = 3
text = "0"
label_settings = SubResource("LabelSettings_7jsl8")
horizontal_alignment = 1

[node name="Puntaje2" type="Label" parent="Puntajes"]
layout_mode = 2
size_flags_horizontal = 3
text = "0"
label_settings = SubResource("LabelSettings_nlx8v")
horizontal_alignment = 1

[node name="backgorund" type="ColorRect" parent="."]
offset_left = -34.0
offset_top = -26.0
offset_right = 1343.0
offset_bottom = 767.0
size_flags_horizontal = 0
color = Color(0, 0, 0, 1)

[node name="Player1" type="Area2D" parent="."]
position = Vector2(50, 360)
script = ExtResource("2_x5usa")
metadata/_edit_group_ = true

[node name="ColorRect" type="ColorRect" parent="Player1"]
offset_left = -9.0
offset_top = -54.0
offset_right = 10.0
offset_bottom = 54.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player1"]
shape = SubResource("RectangleShape2D_8iadh")

[node name="Player2" type="Area2D" parent="."]
position = Vector2(1230, 360)
script = ExtResource("3_i0qbh")
metadata/_edit_group_ = true

[node name="ColorRect" type="ColorRect" parent="Player2"]
offset_left = -9.0
offset_top = -54.0
offset_right = 10.0
offset_bottom = 54.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player2"]
shape = SubResource("RectangleShape2D_8iadh")

[node name="Pelota" type="Area2D" parent="."]
position = Vector2(640, 360)
script = ExtResource("4_daccs")
metadata/_edit_group_ = true

[node name="ColorRect" type="ColorRect" parent="Pelota"]
offset_left = -10.0
offset_top = -10.0
offset_right = 10.0
offset_bottom = 10.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pelota"]
shape = SubResource("RectangleShape2D_42rne")

[node name="Rebote" type="AudioStreamPlayer" parent="Pelota"]
stream = ExtResource("5_eibih")

[node name="TiempoMuerto" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[node name="Temporizador" type="Label" parent="."]
offset_left = 602.0
offset_top = 193.0
offset_right = 675.0
offset_bottom = 368.0
label_settings = SubResource("LabelSettings_poaqt")

[node name="MenuPausa" type="Node" parent="."]

[node name="Contenedor" type="VBoxContainer" parent="MenuPausa"]
process_mode = 3
offset_left = 578.0
offset_top = 417.0
offset_right = 716.0
offset_bottom = 483.0
script = ExtResource("6_aecni")
metadata/_edit_group_ = true

[node name="NuevoJuego" type="Button" parent="MenuPausa/Contenedor"]
process_mode = 2
layout_mode = 2
text = "Nuevo Juego"

[node name="Salir" type="Button" parent="MenuPausa/Contenedor"]
process_mode = 2
layout_mode = 2
text = "Salir al escritorio"

[node name="Gol" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_545xp")

[node name="Limites" type="Node" parent="."]

[node name="ArcoDerecho" type="Area2D" parent="Limites"]
position = Vector2(1290, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Limites/ArcoDerecho"]
position = Vector2(-1.5, 360)
shape = SubResource("RectangleShape2D_3inup")

[node name="ArcoIzquierdo" type="Area2D" parent="Limites"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Limites/ArcoIzquierdo"]
position = Vector2(-7.5, 360)
shape = SubResource("RectangleShape2D_3inup")

[node name="Piso" type="Area2D" parent="Limites"]
position = Vector2(0, 720)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Limites/Piso"]
position = Vector2(641, 0)
shape = SubResource("RectangleShape2D_dv5tc")

[node name="Techo" type="Area2D" parent="Limites"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Limites/Techo"]
position = Vector2(640.5, 0)
shape = SubResource("RectangleShape2D_dv5tc")

[connection signal="area_entered" from="Player1" to="Pelota" method="_on_hit_ball"]
[connection signal="area_entered" from="Player2" to="Pelota" method="_on_hit_ball"]
[connection signal="timeout" from="TiempoMuerto" to="." method="_on_tiempo_muerto_timeout"]
[connection signal="timeout" from="TiempoMuerto" to="Pelota" method="_on_tiempo_muerto_timeout"]
[connection signal="pressed" from="MenuPausa/Contenedor/NuevoJuego" to="." method="_on_nuevo_juego_pressed"]
[connection signal="pressed" from="MenuPausa/Contenedor/Salir" to="." method="_on_salir_pressed"]
[connection signal="area_entered" from="Limites/ArcoDerecho" to="." method="_on_arco_derecho_area_entered"]
[connection signal="area_entered" from="Limites/ArcoIzquierdo" to="." method="_on_arco_izquierdo_area_entered"]
[connection signal="area_entered" from="Limites/Piso" to="Pelota" method="_on_pelota_choca_pared"]
[connection signal="area_entered" from="Limites/Techo" to="Pelota" method="_on_pelota_choca_pared"]
